--- a/app.json
+++ b/app.json
@@ -12,9 +12,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -28,7 +26,18 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "../assets/fonts/Avenir/Avenir-Black.ttf",
+            "../assets/fonts/Avenir/Avenir-Light.ttf",
+            "../assets/fonts/Avenir/Avenir-Medium.ttf",
+            "../assets/fonts/Avenir/Avenir-Heavy.ttf"
+          ]
+        }
+      ]
     ]
   }
 }
