--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-drax": "^0.10.3",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-maps": "1.10.0",
     "react-native-otp-entry": "^1.6.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
