--- a/package.json
+++ b/package.json
@@ -3,37 +3,38 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "npx expo start",
-    "start:offline": "npx expo start --offline",
+    "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "expo": "~50.0.14",
-    "expo-constants": "~15.4.5",
-    "expo-font": "^11.10.3",
-    "expo-linear-gradient": "~12.7.2",
-    "expo-linking": "~6.2.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-native-fontawesome": "^0.2.5",
+    "@types/react-native-snap-carousel": "^3.8.11",
+    "expo": "~44.0.0",
+    "expo-constants": "~12.1.3",
+    "expo-font": "^12.0.3",
+    "expo-linear-gradient": "~11.0.3",
+    "expo-linking": "~2.4.0",
     "expo-router": "~3.4.8",
-    "expo-status-bar": "~1.11.1",
+    "expo-status-bar": "~1.0.6",
     "formik": "^2.4.5",
-    "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react": "~17.0.1",
+    "react-native": "~0.64.2",
     "react-native-otp-entry": "^1.6.0",
-    "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0"
+    "react-native-paper": "^4.9.2",
+    "react-native-safe-area-context": "~3.3.0",
+    "react-native-screens": "~3.8.0",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^12.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@babel/core": "^7.16.5",
+    "@types/react": "~17.0.38",
     "@types/react-native-vector-icons": "^6.4.18",
-    "typescript": "^5.1.3"
+    "typescript": "^4.5.4"
   },
   "private": true
 }
