--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "expo": "~50.0.14",
+    "expo": "^50.0.15",
     "expo-constants": "~15.4.5",
     "expo-font": "^11.10.3",
     "expo-linear-gradient": "~12.7.2",
