--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start:offline": "npx expo start --offline",
+    "start": "npx expo start",
+    "android": "npx expo start --android",
+    "ios": "npx expo start --ios",
+    "web": "npx expo start --web"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -18,7 +19,7 @@
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
-    "expo-status-bar": "~1.0.6",
+    "expo-status-bar": "^1.11.1",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.73.6",
@@ -27,16 +28,16 @@
     "react-native-maps": "1.10.0",
     "react-native-otp-entry": "^1.6.0",
     "react-native-paper": "^4.9.2",
-    "react-native-safe-area-context": "~3.3.0",
-    "react-native-screens": "~3.8.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "^12.1.1"
+    "react-native-svg": "14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
-    "@types/react": "~17.0.38",
+    "@types/react": "^18.2.78",
     "@types/react-native-vector-icons": "^6.4.18",
-    "typescript": "^4.5.4"
+    "typescript": "^5.4.5"
   },
   "private": true
 }
