ch:refactoring components

--- a/app.json
+++ b/app.json
@@ -8,8 +8,8 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
+      "image": "./assets/images/splash_logo.ico",
+      "resizeMode": "",
       "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": ["**/*"],
