--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "expo": "^50.0.15",
-    "expo-constants": "~15.4.5",
+    "@shopify/react-native-skia": "0.1.221",
+    "expo": "~50.0.17",
+    "expo-constants": "~15.4.6",
     "expo-font": "^11.10.3",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-status-bar": "^1.11.1",
     "formik": "^2.4.5",
+    "i": "^0.3.7",
+    "npm": "^10.5.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-drax": "^0.10.3",
@@ -28,11 +31,13 @@
     "react-native-maps": "1.10.0",
     "react-native-otp-entry": "^1.6.0",
     "react-native-paper": "^4.9.2",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "14.1.0",
-    "react-native-reanimated": "~3.6.2"
+    "react-native-svg": "14.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
