--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "npm": "^10.5.2",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-appwrite": "^0.2.2",
     "react-native-drax": "^0.10.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "1.10.0",
@@ -36,7 +37,9 @@
     "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "14.1.0"
+    "react-native-svg": "14.1.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
