Ft booking wheel (#13)
* ft: setup basic functionalities of the booking wheel

* ft:choose duration wheel on the booking screen

* ft:Appwrite setup

--- a/app.json
+++ b/app.json
@@ -5,12 +5,14 @@
     "scheme": "hoop_car_park_reservation_app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/images/hoop.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/images/splash_logo.ico",
-      "resizeMode": "",
-      "backgroundColor": "#ffffff"
+      "image": "./assets/images/splash_screen.png",
+      "backgroundColor": "#ffffff",
+      "width": 200,
+      "height": 200,
+      "resizeMode": "cover"
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
