ft: Registration, Loggin, Logout

--- a/app.json
+++ b/app.json
@@ -14,7 +14,9 @@
       "height": 200,
       "resizeMode": "cover"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -39,7 +41,8 @@
             "../assets/fonts/Avenir/Avenir-Heavy.ttf"
           ]
         }
-      ]
+      ],
+      "expo-secure-store"
     ]
   }
 }
