--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "^1.11.1",
     "formik": "^2.4.5",
     "i": "^0.3.7",
@@ -38,6 +39,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "zustand": "^4.5.2"
   },
