--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@shopify/react-native-skia": "0.1.221",
+    "@supabase/supabase-js": "^2.42.7",
     "expo": "~50.0.17",
     "expo-constants": "~15.4.6",
     "expo-font": "^11.10.3",
@@ -29,6 +31,7 @@
     "react-native": "0.73.6",
     "react-native-appwrite": "^0.2.2",
     "react-native-drax": "^0.10.3",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-maps": "1.10.0",
     "react-native-otp-entry": "^1.6.0",
@@ -38,6 +41,7 @@
     "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-skeleton-placeholder": "^5.2.4",
     "react-native-svg": "14.1.0",
     "react-native-toast-message": "^2.2.0",
     "react-native-url-polyfill": "^2.0.0",
